`Chore`: Refactorings and cleanups (#323)